--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
